# noxaudit

./: .gitignore  .pre-commit-config.yaml  .ralph-prompt.txt  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  mkdocs.yml  nightwatch.yml.example  noxaudit.yml.example  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  draft-email.yml  noxaudit.yml.example  (+2 more)
.ralph/: current-events  current-loop-id  events-20260216-045919.jsonl  history.jsonl
action/: action.yml
benchmark/: CORPUS.md  RESULTS.md  corpus-phase1.yml  corpus.yml  index.html
changelog/: index.html
contributing/: index.html
docs/: CNAME  benchmark.md  index.md
drafts/: v1.0.0.md  v1.0.1.md  v1.1.0.md
focus_prompts/: dependencies.md  docs.md  hygiene.md  patterns.md  performance.md  security.md  testing.md
nightwatch/: config.py  issues.py  runner.py
noxaudit/: __init__.py  cli.py  config.py  cost_ledger.py  decisions.py  frames.py  issues.py  models.py  prepass.py  pricing.py  reporter.py  runner.py  sarif.py
products/: noxaudit.yaml
scripts/: benchmark.py  benchmark_analyze.py  pre-push.sh  setup-hooks.sh
search/: search_index.json
tests/: conftest.py  test_baseline.py  test_benchmark.py  test_benchmark_analyze.py  test_cli.py  test_cli_integration.py  test_config.py  test_cost_tracking.py  test_decisions.py  test_estimate.py  test_focus.py  test_frames.py  test_gemini_provider.py  test_mcp_server.py  test_mcp_state.py  test_models.py  test_openai_provider.py  test_provider.py  test_reporter.py  test_runner.py  test_sarif.py  test_sarif_integration.py
(+60 files in other folders)
