[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noxaudit"
version = "0.1.0"
description = "Nightly AI-powered codebase audits with rotating focus areas, multi-provider support, and decision memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Atriumn", email = "hello@atriumn.com" },
]
keywords = ["ai", "code-review", "audit", "security", "codebase", "nightwatch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]
mcp = ["mcp>=1.2.0"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]

[project.scripts]
noxaudit = "noxaudit.cli:main"

[project.urls]
Homepage = "https://github.com/atriumn/noxaudit"
Issues = "https://github.com/atriumn/noxaudit/issues"

[tool.hatch.build.targets.wheel]
packages = ["noxaudit"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cli_integration: end-to-end tests through the CLI entry point (new features must have at least one)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
